syntax = "proto3";

option csharp_namespace = "DLHO.DiscountCodeGenerator.gRPC.Protos";

package discountcode;

service DiscountCodeServiceGRPC {
  rpc GenerateCodesAsync(GenerateRequest) returns (GenerateResponse);
  rpc UseCodeAsync(UseCodeRequest) returns (UseCodeResponse);
  rpc GetCodesAsync(GetCodesRequest) returns (GetCodeResponse);
}
message DiscountCode {
  int32 id = 1;
  string code = 2;
}

message GenerateRequest {
  uint32 count = 1;
  uint32 length = 2;
}

message GenerateResponse {
  bool result = 1;
}

message UseCodeRequest {
  string code = 1;
}

message UseCodeResponse {
  bool result = 1;
}
message GetCodesRequest {}

message GetCodeResponse{
    repeated DiscountCode items = 1;
}